--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,43 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/blue"
             android:text="BIENVENIDOS AL LABORATORIO 3 DE IoT"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:layout_width="450dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="1dp"
+            android:text="Button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:layout_width="450dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="210dp"
+            android:layout_marginEnd="1dp"
+            android:text="Button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:layout_width="450dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="500dp"
+            android:layout_marginEnd="20dp"
+            android:text="Button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,14 +65,12 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Bienvenido al Buscador de Peliculas" />
 
             <ImageView
-                android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/pelisplus" />
@@ -73,12 +103,13 @@
                     android:text="Contador de números primos,Podra visualizar los primeros 999 números primos" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/irContadorPrimos"
                     android:layout_width="158dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="90dp"
                     android:layout_weight="1"
                     android:text="Vizualizar" />
+
             </LinearLayout>
 
         </LinearLayout>
@@ -96,15 +127,15 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <EditText
-                android:id="@+id/textView3"
+                android:id="@+id/idPelicula"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="idPelicula(IMDb)" />
+                android:hint="idPelicula(IMDb)" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/irVentanaPeliculas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
